# RapidRAW-Mark-I

./: .env.example  .gitignore  .gitmodules  README.md  index.html  mod1-refactor_15JAN26.md  package-lock.json  package.json
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: build.yml  ci.yml  pr-ci.yml  release.yml
data/: io.github.CyberTimon.RapidRAW.metainfo.xml
packaging/: io.github.CyberTimon.RapidRAW.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_processing.rs  comfyui_connector.rs  culling.rs  denoising.rs  errors.rs  file_management.rs  formats.rs  gpu_processing.rs  image_loader.rs  image_processing.rs  inpainting.rs  lut_processing.rs  main.rs  mask_generation.rs  panorama_stitching.rs  preset_converter.rs  raw_processing.rs  tagging.rs
src-tauri/src/panorama_utils/: mod.rs  processing.rs  stitching.rs
src-tauri/src/shaders/: blur.wgsl  shader.wgsl
src-tauri/src/tagging_utils/: candidates.rs  hierarchy.rs  mod.rs
src-tauri/workflows/: generative_replace.json
src/components/: ErrorBoundary.tsx
src/components/adjustments/: Basic.tsx  BlurRecovery.tsx  Color.tsx  Curves.tsx  Details.tsx  Effects.tsx  LowLightRecovery.tsx  Upscale.tsx
src/components/modals/: AddPresetModal.tsx  CollageModal.tsx  ConfirmModal.tsx  CopyPasteSettingsModal.tsx  CreateFolderModal.tsx  CullingModal.tsx  DenoiseModal.tsx
src/components/panel/: BottomBar.tsx  CommunityPage.tsx  Editor.tsx  Filmstrip.tsx  FolderTree.tsx  MainLibrary.tsx  SettingsPanel.tsx
src/components/panel/editor/: EditorToolbar.tsx  ExifIcons.tsx  ImageCanvas.tsx
src/components/panel/right/: AIControls.tsx  (+11 more)
src/components/ui/: AppProperties.tsx  CollapsibleSection.tsx  ColorWheel.tsx  ImagePicker.tsx  LUTControl.tsx  Slider.tsx  Switch.tsx
src/context/: ContextMenuContext.tsx  TaggingSubMenu.tsx
src/hooks/: useKeyboardShortcuts.tsx  usePresets.ts  useThumbnails.tsx
src/types/: events.ts  index.ts
src/utils/: adjustments.tsx  json.ts  themes.tsx
src/window/: TitleBar.tsx
