[package]
name = "RapidRAW"
description = "A blazingly-fast, non-destructive, and GPU-accelerated RAW image editor built with performance in mind."
authors = ["Timon Käch"]
edition = "2024"
rust-version = "1.92"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = { version = "2.9", features = [ "macos-private-api", "rustls-tls" ] }
tauri-plugin-dialog = "2.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"
base64 = "0.22"
tauri-plugin-fs = "2.4.4"
rayon = "1.11.0"
blake3 = "1.8.2"
wgpu = "28.0"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
window-vibrancy = "0.7.1"
anyhow = "1.0.100"
kamadak-exif = "0.6.1"
rawler = { path = "rawler/rawler" }
serde_bytes = "0.11.19"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
walkdir = "2.5.0"
trash = "5.2.5"
imageproc = "0.25.0"
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
ndarray = "0.16"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
tauri-plugin-process = "2.3.1"
tauri-plugin-os = "2.3.2"
raw-window-handle = "0.6.2"
os_info = "3"
log = "0.4"
fern = "0.7"
little_exif = "0.6.20"
chrono = "0.4"
tokenizers = "0.22.2"
once_cell = "1.21"
futures = "0.3.31"
sha2 = "0.10"
nalgebra = "0.34.1"
rand = "0.9"
tauri-plugin-shell = "2.3.3"
tempfile = "3.23.0"
num_cpus = "1.17.0"
mimalloc = "0.1.48"
image_hasher = "3.0.0"
regex = "1.12.2"
memmap2 = "0.9.9"
io = "0.0.2"
half = { version = "2.7.1", features = ["bytemuck"] }
exr = "1.74.0"
qoi = "0.4.1"
glam = "0.30.9"
tauri-plugin-single-instance = "2.3.6"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking"] }
hex = "0.4"

[profile.dev]
opt-level = 3
debug = true
incremental = true

[profile.release]
codegen-units = 1
lto = true
strip = true
